k8s/5-reservation-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service-deployment
  labels:
    app: reservation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
      - name: reservation-service
        image: us-central1-docker.pkg.dev/forward-script-438915-v8/hrmis-artifact-registry/reservation-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  selector:
    app: reservation-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
