k8s/7-employee-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service-deployment
  labels:
    app: employee-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-service
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      containers:
      - name: employee-service
        image: us-central1-docker.pkg.dev/forward-script-438915-v8/hrmis-artifact-registry/employee-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  selector:
    app: employee-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8084
