k8s/8-restaurant-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-order-service-deployment
  labels:
    app: restaurant-order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-order-service
  template:
    metadata:
      labels:
        app: restaurant-order-service
    spec:
      containers:
      - name: restaurant-order-service
        image: us-central1-docker.pkg.dev/forward-script-438915-v8/hrmis-artifact-registry/restaurant-order-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-order-service
spec:
  selector:
    app: restaurant-order-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8087
