k8s/9-virtual-waiter-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtual-waiter-service-deployment
  labels:
    app: virtual-waiter-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: virtual-waiter-service
  template:
    metadata:
      labels:
        app: virtual-waiter-service
    spec:
      containers:
      - name: virtual-waiter-service
        image: us-central1-docker.pkg.dev/forward-script-438915-v8/hrmis-artifact-registry/virtual-waiter-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: virtual-waiter-service
spec:
  selector:
    app: virtual-waiter-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
